[package]
name = "rexmrg"
version = "0.1.0"
authors = ["Garrett van Wageningen <ghvanw283@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rexmrg"
path = "src/lib.rs"

[[bin]]
name = "rexmrg"
path = "src/main.rs"

[dependencies]
